--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,10 @@
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic);
+
 html, body {
 	height: 100%;
 	padding: 0;
 	margin: 0;
+	font-family: 'Source Sans Pro';
 }
 
 main {
@@ -42,8 +45,8 @@ header {
 .welcome-heading {
 	color: #fff;
 	line-height: 1.6em;
+	font-weight: 300;
 }
-
 
 .team {
 	height: auto;
@@ -67,6 +70,7 @@ header {
 	text-align: center;
 	font-size: 2.5em;
 	margin: 20px auto 0;
+	font-weight: 300;
 }
 
 .team-small-heading {
@@ -74,12 +78,14 @@ header {
 	font-size: 2em;
 	text-align: center;
 	margin: 20px auto 0;
+	font-weight: 300;
 }
 
 .team-subtext {
 	font-size: 1em;
 	color: #fff;
 	margin: 20px auto 0;
+	font-weight: 300;
 }
 
 .product {
@@ -88,7 +94,7 @@ header {
 }
 
 .product-paragraph {
-	font-size: 1.2em;
+	font-size: 1.7em;
 	color: #FFF;
 	line-height: 1.6em;
 	font-weight: 300;
@@ -111,6 +117,7 @@ footer {
 	color: #fff;
 	text-align: center;
 	font-size: 3.5em;
+	font-weight: 300;
 }
 
 .footer-form {
@@ -124,7 +131,7 @@ footer {
 	margin: 20px 0 auto;
 	background: transparent;
 	border: none;
-	border-bottom: 1px solid #000;
+	border-bottom: 1px solid rgba(255, 255, 255, 0.6);
 	height: 40px;
 	font-size: 1.5em;
 	font-weight: 300;
@@ -139,6 +146,7 @@ footer {
 	width: 50%;
 	margin: 0 auto;
 	display: block;
+	float: right;
 	background-color: #95A5A6;
 	border: none;
 	margin-top: 20px;
