--- a/css/phone.css
+++ b/css/phone.css
@@ -4,6 +4,7 @@
 
 .welcome-heading {
 	font-size: 2.5em;
+	margin-top: 50px;
 }
 
 .product {
@@ -21,4 +22,8 @@
 
 .product-paragraph {
 	font-size: 1.2em;
+}
+
+.input-field {
+	font-size: 1em;
 }
